fix footer spacing

--- a/css/style_overides.css
+++ b/css/style_overides.css
@@ -327,6 +327,9 @@ img{
 	.navbar-default .navbar-nav>li>a{
 		padding-left: 0;
 	}
+	.margin-top-60{
+		margin-top: 56px;
+	}
 	.margin-top-100{
 		margin-top: 58px;
 	}
